src/pages/messaging/agent-chat-api/v3.6/rtm-pushes/index.mdx
---
weight: 23
category: "messaging"
subcategory: "agent-chat-api"
title: "RTM pushes"
tagline: "The reference of LiveChat RTM API pushes."
desc: "This document contains a reference of LiveChat RTM API pushes."
apiVersion: "3.6"
robots: "noindex"
---

This document contains a reference of **pushes** available in the **LiveChat Agent Chat API**. Similarly to [webhooks](/management/webhooks), pushes notify you when specific events occur. They're usually generated as result of RTM API actions, but it's also possible to receive them in result of Web API actions.

<Section>
<Text>

## Introduction

Here's what you need to know about **pushes**:

- They are generated primarily by RTM API actions, but also by Web API actions.
- They notify you when specific events occur.
- Can be **delivered** only in the websocket transport.
- You don't need to register pushes to receive them.
- Their equivalents in Web API are [webhooks](/management/configuration-api/v3.6/#webhooks). Pushes and webhooks have similar payloads.
- There are no retries for pushes. To determine if a user has seen an event, compare the [event's](/messaging/agent-chat-api/v3.6/data-structures/#response) `created_at` parameter with the [user's](/messaging/agent-chat-api/v3.6/data-structures/#users) `events_seen_up_to` field.

## Available pushes

|                   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**         | [`incoming_chat`](#incoming_chat) [`chat_deactivated`](#chat_deactivated) [`chat_deleted`](#chat_deleted) [`thread_deleted`](#thread_deleted) [`threads_deleted`](#threads_deleted)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| **Chat access**   | [`chat_access_updated`](#chat_access_updated) [`chat_transferred`](#chat_transferred)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| **Chat users**    | [`user_added_to_chat`](#user_added_to_chat) [`user_removed_from_chat`](#user_removed_from_chat)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| **Events**        | [`incoming_event`](#incoming_event) [`event_deleted`](#event_deleted) [`event_updated`](#event_updated) [`incoming_rich_message_postback`](#incoming_rich_message_postback)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| **Properties**    | [`chat_properties_updated`](#chat_properties_updated) [`chat_properties_deleted`](#chat_properties_deleted) [`thread_properties_updated`](#thread_properties_updated) [`thread_properties_deleted`](#thread_properties_deleted) [`event_properties_updated`](#event_properties_updated) [`event_properties_deleted`](#event_properties_deleted)                                                                                                                                                                                                                                                                                                                                                                                             |
| **Thread tags**   | [`thread_tagged`](#thread_tagged) [`thread_untagged`](#thread_untagged)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| **Customers**     | [`incoming_customers`](#incoming_customers) [`incoming_customer`](#incoming_customer) [`customer_updated`](#customer_updated) [`customer_page_updated`](#customer_page_updated) [`customer_banned`](#customer_banned) [`customer_transferred`](#customer_transferred) [`customer_left`](#customer_left) [`subscribed_customers_totals_updated`](#subscribed_customers_totals_updated) [`ticket_created`](#ticket_created)  [`ticket_deleted`](#ticket_deleted)                                                                                                                                                                                                                                          |
| **Status**        | [`routing_status_set`](#routing_status_set) [`agent_disconnected`](#agent_disconnected)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| **Configuration** | [`agent_created`](#agent_created) [`agent_approved`](#agent_approved) [`agent_updated`](#agent_updated) [`agent_suspended`](#agent_suspended) [`agent_unsuspended`](#agent_unsuspended) [`agent_deleted`](#agent_deleted) [`auto_accesses_updated`](#auto_accesses_updated) [`bot_created`](#bot_created) [`bot_updated`](#bot_updated) [`bot_deleted`](#bot_deleted) [`group_created`](#group_created) [`group_updated`](#group_updated) [`group_deleted`](#group_deleted) [`tag_created`](#tag_created) [`tag_deleted`](#tag_deleted) [`tag_updated`](#tag_updated) [`groups_status_updated`](#groups_status_updated) [`license_properties_updated`](#license_properties_updated) [`group_properties_updated`](#group_properties_updated) |
| **Other**         | [`events_marked_as_seen`](#events_marked_as_seen) [`incoming_sneak_peek`](#incoming_sneak_peek) [`incoming_thinking_indicator`](#incoming_thinking_indicator) [`incoming_typing_indicator`](#incoming_typing_indicator) [`incoming_multicast`](#incoming_multicast) [`chat_unfollowed`](#chat_unfollowed) [`queue_positions_updated`](#queue_positions_updated) [`customer_unfollowed`](#customer-unfollowed)                                                                                                                                                                                                                                                                                                                               |

</Text>

<Code>

<CodeResponse title={'general push format'}>

```json
{
  "version": "<api_version>",
  "request_id": "<request_id>", // optional, applies only to the requester
  "action": "<action>",
  "type": "push",
  "payload": {
  // optional payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chats

### `incoming_chat`

Informs about a chat coming with a new thread. The push payload contains the whole chat data structure. If the chat was started with some initial events, the thread object contains them.

<CodeResponse title={'Sample push payload'}>

```json
{
  "requester_id": "smith@example.com",
  "chat": {
    "id": "PJ0MRSHTDG",
    "users": [
      // array of "User" objects
    ],
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
      }
      // ...
    },
    "thread": {
      // "Thread" object
    },
  },
  "transferred_from": {
    "group_ids": [ 1 ],
    "agent_ids": [ "agent@example.com" ]
  }
}
```

</CodeResponse>

### `chat_deactivated`

Informs that a chat was deactivated by closing the currently open thread.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c" // optional
}
```

</CodeResponse>

#### Push payload

| Field     | Notes                                         |
| --------- | --------------------------------------------- |
| `user_id` | Missing if a thread was closed by the router. |

### `chat_deleted`

Informs that a chat was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG"
}
```

</CodeResponse>

### `thread_deleted`

Informs that a thread was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8"
}
```

</CodeResponse>

### `threads_deleted`

Informs that several threads from a specific date range or with the same tag were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "date_from": "2017-10-12T15:19:21.010200Z",
  "date_to": "2019-10-12T15:19:21.010200Z",
  "tag": "bug_report"
}
```

</CodeResponse>

## Chat access

### `chat_access_updated`

Informs about the update of a user's access to a particular chat. It contains the updated [access](/messaging/agent-chat-api/v3.6/data-structures/#access-1) data structure.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [0, 1]
  }
}
```

</CodeResponse>

#### Push payload

| Field    | Notes                                                                                              |
| -------- | -------------------------------------------------------------------------------------------------- |
| `id`     | Chat ID                                                                                            |
| `access` | The updated chat [access](/messaging/agent-chat-api/v3.6/data-structures/#access-1) data structure |

### `chat_transferred`

Informs that a chat was transferred to a different group or to an agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "requester_id": "jones@example.com",
  "reason": "manual",
  "transferred_to": {
    "group_ids": [ 19 ],
    "agent_ids": ["smith@example.com"],
  },
  "queue": {
    "position": 42,
    "wait_time": 1337,
    "queued_at": "2019-12-09T12:01:18.909000Z"
  }
}
```

</CodeResponse>

#### Push payload

| Field            | Notes                                                                    |
| ---------------- | ------------------------------------------------------------------------ |
| `thread_id`      | Present if the chat is active.                                           |
| `transferred_to` | IDs of the groups and agents the chat is assigned to after the transfer. |
| `reason` **\***  | Informs why the chat was transferred.                                    |
| `queue`          | Present if the chat is queued after the transfer.                        |

**\*)**
Possible reasons: `manual`, `inactive`, `assigned`, `unassigned`, `other`.

## Chat users

### `user_added_to_chat`

Informs that a user (Customer or Agent) was added to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user": {
  // "User > Customer" or "User > Agent" object
  },
  "reason": "manual",
  "requester_id": "smith@example.com"
}
```

</CodeResponse>

#### Push payload

| Field          | Notes                                            |
| -------------- | ------------------------------------------------ |
| `thread_id`    | Present when a user was added to an active chat. |
| `reason`       | Why the user was added.                          |
| `requester_id` | Present if the user was added by an agent.       |

### `user_removed_from_chat`

Informs that a user (Customer or Agent) was removed from a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "agent@example.com",
  "reason": "manual",
  "requester_id": "smith@example.com"
}
```

</CodeResponse>

#### Push payload

| Field          | Notes                                                |
| -------------- | ---------------------------------------------------- |
| `thread_id`    | Present when a user was removed from an active chat. |
| `reason`       | Why the user was removed.                            |
| `requester_id` | Present if the user was removed by an agent.         |

## Events

### `incoming_event`

Informs about an incoming [event](/messaging/agent-chat-api/v3.6/data-structures/#events) sent to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event": {
    "id": "Q20163UAHO_2",
    "created_at": "2019-12-05T07:27:08.820000Z",
    "visibility": "all",
    "type": "message",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
      }
    },
    "text": "Hello",
    "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
  }
}
```

</CodeResponse>

### `event_deleted`

Informs that an [event](/messaging/agent-chat-api/v3.6/data-structures/#events) was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "123-123-123-123",
  "thread_id": "E2WDHA8A",
  "event_id": "E2WDHA8A_4"
}
```

</CodeResponse>

### `event_updated`

Informs that an [event](/messaging/agent-chat-api/v3.6/data-structures/#events) was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "123-123-123-123",
  "thread_id": "E2WDHA8A",
  "event": {
  // "Event" object
  }
}
```

</CodeResponse>

### `incoming_rich_message_postback`

Informs about an incoming [rich message](/messaging/agent-chat-api/v3.6/data-structures/#rich-message) postback. The push payload contains the info on the postback itself, as well as the chat it was sent in.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
  "postback": {
  "id": "action_yes",
  "toggled": true
  }
}
```

</CodeResponse>

## Properties

### `chat_properties_updated`

Informs about those chat properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  // ...
  }
}
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_properties_deleted`

Informs about those chat properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `thread_properties_updated`

Informs about those thread properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  // ...
  }
}
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `thread_properties_deleted`

Informs about those thread properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
}
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_updated`

Informs about those event properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  }
}
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_deleted`

Informs about those event properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
```

</CodeResponse>

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

## Thread tags

### `thread_tagged`

Informs that a chat thread was tagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

### `thread_untagged`

Informs that a chat thread was untagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

## Customers

### `incoming_customers`

Informs about customers the agent should be aware of. It's sent after [`login`](/messaging/agent-chat-api/v3.6/rtm-reference#login).

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_monitoring_level": "invited",
  "customers": [{
    // "Customer" user object
  }]
}
```

</CodeResponse>

### `incoming_customer`

Informs that a new or returning customer is available to the agent. It's sent when:

- a new customer registers.
- a customer, who previously left the tracked website, returns.
- an already followed customer, who was temporarily unavailable to the agent, becomes available again (for example, the customer was transferred between groups).

<CodeResponse title={'Sample push payload'}>

```json
{
  // "Customer" user object
}
```

</CodeResponse>

### `customer_updated`

Informs that customer's data changed. The push payload contains the updated fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "name": "Thomas Anderson",
  "email": "t.anderson@example.com",
  "avatar": "https://example.com/avatars/1.jpg",
  "type": "customer",
  "session_fields": [{
    "custom_key": "custom_value"
  }, {
    "another_custom_key": "another_custom_value"
  }]
}
```

</CodeResponse>

### `customer_page_updated`

Informs that a Customer moved to another page of the website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "visit_id": 42,
  "opened_at": "2017-10-12T15:19:21.010200Z",
  "url": "https://www.livechat.com/",
  "title": "LiveChat - Homepage"
}
```

</CodeResponse>

### `customer_banned`

Informs that a Customer was banned for a specified number of days.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "ban": {
  "days": 5
  }
}
```

</CodeResponse>

### `customer_transferred`

Informs that a customer is no longer available to the agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "transferred_to": {
    "group_ids": [1]
  },
  "followed": true
}
```

</CodeResponse>

### `customer_left`

Informs that a Customer left the tracked website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "left_at": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

### `subscribed_customers_totals_updated`

Informs that number of customers matching subscription changed.  This push is sent periodically once limits are reached.

<CodeResponse title={'Sample push payload'}>

```json
{
  "b7eff798f8df43648059649c35c9ed0c": 123,
  "a0c22fddfb7140b5bfc6a8a0bc3117f7": 321
}
```

</CodeResponse>

### `ticket_created`

Informs that a ticket was created for a tracked customer.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "ticket_id": "0c04cb99-817a-4935-9d62-137c89a74388",
  "created_at": "2019-12-05T07:27:08.820000Z"
}
```

</CodeResponse>

### `ticket_deleted`

Informs that a ticket was deleted for a tracked customer.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "ticket_id": "0c04cb99-817a-4935-9d62-137c89a74388"
}
```

</CodeResponse>

## Status

### `routing_status_set`

Informs that an Agent's or Bot Agent's status was changed.

<CodeResponse title={'Sample push payload'}>

```json
{
  "agent_id": "smith@example.com",
  "status": "accepting_chats"
}
```

</CodeResponse>

### `agent_disconnected`

Informs that an Agent was disconnected. The payload contains the reason of the Agent's disconnection.

<CodeResponse title={'Sample push payload'}>

```json
{
  "reason": "misdirected_request",
  "data": {
  // optional
  "region": "fra"
  }
}
```

</CodeResponse>

#### Possible reasons

Based on the received `reason` we suggest a different reaction.

| Type                                | Notes                                                                                                                                 | Suggested behavior                         |
| ----------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| `agent_disconnected_by_server`      | Agent has been disconnected by the server.                                                                                            | Don't reconnect.                           |
| `agent_logged_out_remotely`         | Agent has been logged out remotely.                                                                                                   | Don't reconnect.                           |
| `access_token_revoked`              | Agent access token has been revoked.                                                                                                  | Don't reconnect.                           |
| `connection_evicted`                | Sent to the connection that's replaced by a newly established one, and the new connection exceeded the limit of possible connections. | Don't reconnect.                           |
| `access_token_expired`              | Access token lifetime has elapsed.                                                                                                    | Reconnect and generate a new access token. |
| `connection_timeout`                | Has not received [`ping`](#authentication) from the client for some time, or it's been too long since the connection was authorized.  | Reconnect.                                 |
| `internal_error`                    | Internal error.                                                                                                                       | Reconnect.                                 |
| `license_expired`                   | License has expired.                                                                                                                  | Don't reconnect.                           |
| `license_not_found`                 | License with the specified ID doesn't exist.                                                                                          | Don't reconnect.                           |
| `misdirected_connection` **\***     | Agent connected to the server in the wrong region.                                                                                    | Don't reconnect.                           |
| `unsupported_version`               | Connecting to an unsupported version of the Agent API.                                                                                | Don't reconnect.                           |
| `too_many_connections`              | Agent reached the max. number of connections.                                                                                         | Don't reconnect.                           |
| `too_many_unauthorized_connections` | Agent reached the max. number of unauthorized connections.                                                                            | Reconnect.                                 |
| `role_permissions_changed`          | Role permissions have been changed.                                                                                                   | Reconnect.                                 |

**\*)**
Also, `misdirected_connection` returns the correct `region` value in the optional `data` object.
With this piece of information, the client is able to figure out where it should be connected.

## Configuration

### `agent_created`

Informs that a new agent account was created. The payload contains the full state of the [agent](messaging/agent-chat-api/v3.6/data-structures/#agent) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com",
  "name": "Agent Smith",
  "role": "viceowner",
  "awaiting_approval": false,
  "groups": [
    {
      "id": 5,
      "priority": "first"
    },
    {
      "id": 2,
      "priority": "last"
    },
    {
      "id": 1,
      "priority": "normal"
    }
  ],
  "notifications": [
    "new_visitor",
    "new_goal",
    "visitor_is_typing"
  ],
  "email_subscriptions": [
    "weekly_summary"
  ],
  "work_scheduler": {
    "timezone": "Europe/Warsaw",
    "schedule": [
      {
        "day": "monday",
        "enabled": true,
        "start": "08:30",
        "end": "12:30"
      },
      {
        "day": "monday",
        "enabled": true,
        "start": "13:30",
        "end": "16:30"
      }
    ]
  }
}
```

</CodeResponse>

### `agent_approved`

Informs that an agent's account was approved and is now active.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

### `agent_updated`

Informs that an agent's configuration changed. Contains only the updated properties.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com",
  "work_scheduler": {
    "timezone": "Europe/Warsaw",
    "schedule": [
      {
        "day": "monday",
        "enabled": true,
        "start": "08:30",
        "end": "12:30"
      },
      {
        "day": "monday",
        "enabled": true,
        "start": "13:30",
        "end": "16:30"
      },
      {
        "day": "friday",
        "enabled": true,
        "start": "07:30",
        "end": "21:30"
      }
    ]
  }
}
```

</CodeResponse>

### `agent_suspended`

Informs that an agent's account was suspended.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

### `agent_unsuspended`

Informs that an agent's account was unsuspended.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

### `agent_deleted`

Informs that an agent's account was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

### `auto_accesses_updated`

Informs that auto access rules were modified. The payload contains an array of all changes done as result of adding, updating, or deleting auto access rule.
The resulting payload can contain multiple objects depending on the action:
- for the added [auto access](/management/configuration-api/v3.6/#auto-access) rule, the payload contains the complete state of the auto access rule data structure, including empty fields.
- for the updated [auto access](/management/configuration-api/v3.6/#auto-access) rule, the payload contains only the updated properties.
- for the deleted [auto access](/management/configuration-api/v3.6/#auto-access) rule, the payload confirms the deletion.

<CodeResponse title={'Sample push payload after adding auto access rule'}>

```json
[
  {
      "id": "dc70916fdc9d02ea0bcdee5b2fa64717",
      "next_id": "b1cd0bfea640f671694110c6ae34356f",
      "status": "updated"
  },
  {
      "id": "b1cd0bfea640f671694110c6ae34356f",
      "description": "",
      "access": {
          "groups": [
              0
          ]
      },
      "conditions": {
          "url": {
              "values": [
                  {
                      "value": "https://www.auto-access.test",
                      "exact_match": false
                  }
              ]
          },
          "domain": {
              "values": [
                  {
                      "value": "https://www.auto-access.test",
                      "exact_match": true
                  }
              ]
          },
          "geolocation": {
              "values": [
                  {
                      "country": "United States",
                      "country_code": "US",
                      "region": "California",
                      "city": "Mountain View"
                  }
              ]
          }
      },
      "next_id": "",
      "status": "added"
  }
]
```

</CodeResponse>

<CodeResponse title={'Sample push payload after updating auto access rule'}>

```json
[
  {
      "id": "b1cd0bfea640f671694110c6ae34356f",
      "description": "Auto access updated",
      "next_id": "dc70916fdc9d02ea0bcdee5b2fa64717",
      "status": "updated"
  },
  {
      "id": "dc70916fdc9d02ea0bcdee5b2fa64717",
      "next_id": "",
      "status": "updated"
  }
]

```

</CodeResponse>

<CodeResponse title={'Sample push payload after deleting auto access rule'}>

```json
[
  {
      "id": "b1cd0bfea640f671694110c6ae34356f",
      "next_id": "",
      "status": "updated"
  },
  {
      "id": "dc70916fdc9d02ea0bcdee5b2fa64717",
      "status": "deleted"
  }
]
```

</CodeResponse>

### `bot_created`

Informs that a new bot was added. The payload contains the full state of the [bot](/management/configuration-api/v3.6/#bots) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578",
  "name": "Bot Name",
  "default_group_priority": "first",
  "groups": [
    {
      "id": 0,
      "priority": "normal"
    }
  ],
  "owner_client_id": "asXdesldiAJSq9padj"
}
```

</CodeResponse>

### `bot_updated`

Informs that a bot's configuration changed. Contains only the updated properties.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578",
  "name": "New Bot Name",
}
```

</CodeResponse>

### `bot_deleted`

Informs that a bot was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578"
}
```

</CodeResponse>

### `group_created`

Informs that a group was created within a license. The payload contains the full state of the [group](/management/configuration-api/v3.6/#groups) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42,
  "name": "Sales",
  "language_code": "en",
  "agent_priorities": {
    "agent@example.com": "normal",
    "other_agent@example.com": "first"
  }
}
```

</CodeResponse>

### `group_deleted`

Informs that a group was deleted within a license.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42
}
```

</CodeResponse>

### `group_updated`

Informs that a group was updated within a license. The push payload only includes the updated fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42,
  "name": "Sales"
}
```

</CodeResponse>

### `tag_created`

Informs that a tag was created within a license. The payload contains the full state of the [tag](/management/configuration-api/v3.6/#tags) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "name": "docs_feedback",
  "group_ids": [ 0, 42 ],
  "created_at": "2019-12-09T12:01:18.909000Z",
  "author_id": "smith@example.com"
}
```

</CodeResponse>

### `tag_deleted`

Informs that a tag was deleted within a license.

<CodeResponse title={'Sample push payload'}>

```json
{
  "name": "docs_feedback"
}
```

</CodeResponse>

### `tag_updated`

Informs that a tag was updated within a license.

<CodeResponse title={'Sample push payload'}>

```json
{
  "name": "docs_feedback",
  "group_ids": [ 0, 42 ]
}
```

</CodeResponse>

### `groups_status_updated`

Informs that the statuses of groups that the agent has access to were updated. The push payload only includes the updated fields.
Possible statuses: `accepting_chats`, `not_accepting_chats`, `offline`.

<CodeResponse title={'Sample push payload'}>

```json
{
    "groups": [
        {
            "id": 0,
            "status": "offline"
        }
    ]
}
```

</CodeResponse>

### `license_properties_updated`

Informs about those license properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "properties": {
    "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
    }
  }
}
```

</CodeResponse>

### `group_properties_updated`

Informs about those group properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "group_id": 1,
  "properties": {
    "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
    }
  }
}
```

</CodeResponse>

## Other

### `incoming_thinking_indicator`

Informs that one of the chat users (an Agent or a Bot Agent) is currently preparing a response. The message hasn't been sent yet.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "author_id": "smith@example.com",
  "sent_at": "2025-07-16T12:34:56.909000Z",
  "title": "Thinking...",
  "description": "Fetching data from the Billing API...",
  "custom_id": "31-0C-1C-07-DB-16"
}
```

</CodeResponse>

### `incoming_typing_indicator`

Informs that one of the chat users (an Agent or a Bot Agent) is currently typing a message. The message hasn't been sent yet. The push payload contains the typing indicator object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "typing_indicator": {
    "author_id": "smith@example.com",
    "visibility": "all",
    "timestamp": 1574245378,
    "is_typing": true
  }
}
```

</CodeResponse>

### `incoming_sneak_peek`

Informs about the message a Customer is currently typing. The push payload contains the sneak peek object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "sneak_peek": {
    "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "text": "Hello",
    "timestamp": 1574245378
  }
}
```

</CodeResponse>

### `events_marked_as_seen`

Informs that a user has seen events up to a specific time.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "seen_up_to": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

### `incoming_multicast`

Informs about messages sent via the `multicast` method or by the system.

<CodeResponse title={'Sample push payload'}>

```json
{
  "author_id": "smith@example.com",
  "content": {
  "example": {
    "nested": "json"
  }
  },
  "type": "type1"
}
```

</CodeResponse>

#### Push payload

| Field       | Required | Notes                                                                                            |
| ----------- | -------- | ------------------------------------------------------------------------------------------------ |
| `author_id` | No       | Present only if the push was generated by the **Multicast** method and not sent from the server. |
| `content`   | Yes      |                                                                                                  |
| `type`      | No       |                                                                                                  |

### `chat_unfollowed`

Informs that a chat has been unfollowed. Useful in multiple connection scenarios, where one app/integration needs to know that another one unfollowed the chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG"
}
```

</CodeResponse>

### `queue_positions_updated`

New positions and wait times for queued chats.

<CodeResponse title={'Sample push payload'}>

```json
[{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "queue": {
    "position": 42,
    "wait_time": 1337
  }
}, {
  "chat_id": "PJ0VRSATDS",
  "thread_id": "K60QPKSON9",
  "queue": {
    "position": 43,
    "wait_time": 1373
  }
}]
```

</CodeResponse>

### `customer_unfollowed`

Informs that a customer was unfollowed. Useful in multiple connection scenarios, where one app/integration needs to know that another one unfollowed the customer.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
}
```

</CodeResponse>
